--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -1,7 +1,6 @@
 .header {
     display: flex;
-    margin-top: 40px;
+    padding: 40px 98px 0;
     justify-content: space-between;
     align-items: center;
-    height: 21px;
 }
