--- a/src/components/shared/accordion/item/Item.module.scss
+++ b/src/components/shared/accordion/item/Item.module.scss
@@ -6,7 +6,7 @@
     }
 
     .header {
-        padding: 15px 10px 15px 0px;
+        padding: 15px 10px 15px 0;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -17,13 +17,14 @@
             font-weight: 500;
             color: #122947;
         }
+
         .icon {
             min-width: 12px;
         }
     }
 
     .container {
-        height: 0px;
+        height: 0;
         transition: all 0.5s;
         overflow: hidden;
 
