--- a/src/components/ui/cards/cardMiddle/CardMiddle.module.scss
+++ b/src/components/ui/cards/cardMiddle/CardMiddle.module.scss
@@ -7,6 +7,7 @@
     .image {
         width: 270px;
         height: 350px;
+        user-select: none;
     }
 
     .container {
@@ -14,7 +15,7 @@
         z-index: 1;
         bottom: 0;
         left: 0;
-        width: 100%;
+        right: 0;
         display: flex;
         flex-direction: column;
         gap: 10px;
