--- a/src/components/shared/footer/information/Information.module.scss
+++ b/src/components/shared/footer/information/Information.module.scss
@@ -9,5 +9,8 @@
     .text {
         color: #959595;
         font-size: 13px;
+        display: flex;
+        gap: 5px;
+        align-items: center;
     }
 }
