--- a/src/components/ui/cards/cardMiddle/CardMiddle.module.scss
+++ b/src/components/ui/cards/cardMiddle/CardMiddle.module.scss
@@ -4,10 +4,15 @@
     height: 350px;
     display: block;
 
+    @media (max-width: 375px) {
+        width: calc(100vw - 70px);
+    }
+
     .image {
-        width: 270px;
+        width: 100%;
         height: 350px;
         user-select: none;
+        object-fit: cover;
     }
 
     .container {
