--- a/src/components/ui/slider/modules/pagination/Pagination.module.scss
+++ b/src/components/ui/slider/modules/pagination/Pagination.module.scss
@@ -2,8 +2,7 @@
     grid-column: 2 / 3;
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 10px;
+    gap: 8px;
     user-select: none;
 
     .page {
@@ -11,8 +10,9 @@
         font-weight: 500;
         color: #9a9da0;
         transition: 0.3s;
+        width: 30px;
 
-        &:first-child {
+        &:hover {
             color: #122947;
         }
     }
