--- a/src/components/shared/information/Information.module.scss
+++ b/src/components/shared/information/Information.module.scss
@@ -1,17 +1,17 @@
 .information {
-    padding: 0px 100px;
+    padding: 0 100px;
     margin-bottom: 140px;
 
-    @media (max-width: 880px) {
-        padding: 0px 0px 0px 45px;
+    @media (width <= 880px) {
+        padding: 0 0 0 45px;
     }
 
-    @media (max-width: 670px) {
-        padding: 0px 45px;
+    @media (width <= 670px) {
+        padding: 0 45px;
     }
 
-    @media (max-width: 425px) {
-        padding: 0px 15px;
+    @media (width <= 425px) {
+        padding: 0 15px;
     }
 
     .container {
@@ -19,7 +19,7 @@
         display: flex;
         gap: 140px;
         align-items: center;
-        padding: 60px 0px 60px 100px;
+        padding: 60px 0 60px 100px;
 
         &::before {
             content: '';
@@ -33,20 +33,20 @@
             z-index: -1;
         }
 
-        @media (max-width: 1024px) {
+        @media (width <= 1024px) {
             gap: 60px;
         }
 
-        @media (max-width: 880px) {
-            padding: 60px 0px 60px 60px;
+        @media (width <= 880px) {
+            padding: 60px 0 60px 60px;
             gap: 30px;
         }
 
-        @media (max-width: 670px) {
+        @media (width <= 670px) {
             flex-direction: column;
             align-items: start;
             gap: 50px;
-            padding: 60px 0px 0px 0px;
+            padding: 60px 0 0;
 
             &::before {
                 width: 100%;
