--- a/src/components/shared/bestProducts/information/Information.module.scss
+++ b/src/components/shared/bestProducts/information/Information.module.scss
@@ -4,7 +4,7 @@
     gap: 40px;
     max-width: 240px;
 
-    @media (max-width: 570px) {
+    @media (width <= 570px) {
         text-align: center;
 
         .link {
@@ -17,7 +17,7 @@
         flex-direction: column;
         gap: 30px;
 
-        @media (max-width: 570px) {
+        @media (width <= 570px) {
             gap: 25px;
         }
 
@@ -25,6 +25,7 @@
             font-size: 32px;
             font-weight: 500;
         }
+
         .description {
             font-size: 18px;
             line-height: 26.1px;
