--- a/src/components/shared/information/contacts/Contacts.module.scss
+++ b/src/components/shared/information/contacts/Contacts.module.scss
@@ -4,14 +4,15 @@
     gap: 35px;
     max-width: 250px;
 
-    @media (max-width: 670px) {
-        padding: 0px 30px;
+    @media (width <= 670px) {
+        padding: 0 30px;
     }
 
     .title {
         font-size: 32px;
         font-weight: 500;
     }
+
     .contacts {
         display: flex;
         flex-direction: column;
@@ -21,6 +22,7 @@
             display: flex;
             flex-direction: column;
             gap: 15px;
+
             .title {
                 font-size: 18px;
                 font-weight: 500;
