--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -7,6 +7,14 @@
         flex: 1 1 100%;
         display: flex;
         flex-direction: column;
-        gap: 120px;
+        gap: 140px;
+
+        @media (width <= 768px) {
+            gap: 120px;
+        }
+
+        @media (width <= 425px) {
+            gap: 80px;
+        }
     }
 }
