--- a/src/components/shared/join/text/Text.module.scss
+++ b/src/components/shared/join/text/Text.module.scss
@@ -5,7 +5,7 @@
     text-align: flex-start;
     max-width: 380px;
 
-    @media (max-width: 570px) {
+    @media (width <= 570px) {
         text-align: center;
     }
 
