--- a/src/components/shared/header/burger/menu/Menu.module.scss
+++ b/src/components/shared/header/burger/menu/Menu.module.scss
@@ -11,7 +11,7 @@
 
     &__active {
         height: auto;
-        box-shadow: 0px 4px 20px 0px rgb(255 255 255);
+        box-shadow: 0 4px 20px 0 rgb(255 255 255);
     }
 
     .container {
