--- a/src/components/shared/join/images/Images.module.scss
+++ b/src/components/shared/join/images/Images.module.scss
@@ -4,7 +4,7 @@
     max-width: 700px;
     width: 100%;
 
-    @media (max-width: 768px) {
+    @media (width <= 768px) {
         grid-template-columns: repeat(2, 1fr);
         max-width: 450px;
     }
@@ -13,10 +13,11 @@
         max-width: 100%;
         object-fit: cover;
 
-        @media (max-width: 768px) {
+        @media (width <= 768px) {
             &:first-child {
                 display: none;
             }
+
             &:nth-child(4) {
                 display: none;
             }
