--- a/src/components/shared/recommendations/cards/Cards.module.scss
+++ b/src/components/shared/recommendations/cards/Cards.module.scss
@@ -3,7 +3,7 @@
     justify-content: space-between;
     gap: 30px;
 
-    @media (min-width: 1500px) {
+    @media (width >= 1500px) {
         justify-content: space-evenly;
     }
 
