Создал компонент individualCare

--- a/src/components/shared/banners/bannerTwo/BannerTwo.module.scss
+++ b/src/components/shared/banners/bannerTwo/BannerTwo.module.scss
@@ -1,10 +1,10 @@
-.care {
+.wrapper {
     padding: 120px 15px;
     display: flex;
     flex-direction: column;
     gap: 50px;
     align-items: center;
-    background-image: url('../../../assets/images/care.png');
+    background-image: url('../../../../assets/images/care.png');
     background-repeat: no-repeat;
     background-size: cover;
 
