--- a/src/components/shared/individualCare/IndividualCare.module.scss
+++ b/src/components/shared/individualCare/IndividualCare.module.scss
@@ -1,13 +1,8 @@
-.information {
+.wrapper {
     padding: 0 100px;
-    margin-bottom: 140px;
 
     @media (width <= 880px) {
         padding: 0 0 0 45px;
-    }
-
-    @media (width <= 768px) {
-        margin-bottom: 120px;
     }
 
     @media (width <= 670px) {
@@ -16,15 +11,15 @@
 
     @media (width <= 425px) {
         padding: 0 15px;
-        margin-bottom: 80px;
     }
 
     .container {
         position: relative;
         display: flex;
-        gap: 140px;
+        gap: 60px;
         align-items: center;
         padding: 60px 0 60px 100px;
+        justify-content: center;
 
         &::before {
             content: '';
@@ -39,23 +34,27 @@
         }
 
         @media (width <= 1024px) {
-            gap: 60px;
+            gap: 40px;
         }
 
         @media (width <= 880px) {
             padding: 60px 0 60px 60px;
-            gap: 30px;
         }
 
         @media (width <= 670px) {
             flex-direction: column;
-            align-items: start;
+
             gap: 50px;
-            padding: 60px 0 0;
+            padding: 60px 20px 0px 20px;
 
             &::before {
                 width: 100%;
             }
+        }
+
+        .image {
+            height: 400px;
+            object-fit: cover;
         }
     }
 }
