Создал компонент individualCare

--- a/src/components/shared/banners/bannerOne/BannerOne.module.scss
+++ b/src/components/shared/banners/bannerOne/BannerOne.module.scss
@@ -1,12 +1,12 @@
 .wrapper {
-    padding: 80px 0px;
+    padding: 80px 0;
     position: relative;
 
-    @media (max-width: 480px) {
+    @media (width <= 480px) {
         height: 560px;
         display: flex;
         align-items: flex-end;
-        padding: 0px 30px;
+        padding: 0 30px;
     }
 
     .background {
@@ -20,15 +20,15 @@
         left: 0;
         z-index: -1;
 
-        @media (max-width: 1024px) {
+        @media (width <= 1024px) {
             background-size: auto 100%;
-            background-position: -423.895px 0px;
+            background-position: -423.895px 0;
         }
 
-        @media (max-width: 480px) {
+        @media (width <= 480px) {
             background-image: url('../../../../assets/images/bannerTwo.png');
             background-size: cover;
-            background-position: 0px 0px;
+            background-position: 0 0;
         }
     }
 }
