--- a/src/components/shared/banners/bannerTwo/BannerTwo.module.scss
+++ b/src/components/shared/banners/bannerTwo/BannerTwo.module.scss
@@ -1,12 +1,6 @@
 .wrapper {
+    position: relative;
     padding: 120px 15px;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    align-items: center;
-    background-image: url('../../../../assets/images/care.png');
-    background-repeat: no-repeat;
-    background-size: cover;
 
     @media (width <= 768px) {
         padding: 100px 30px;
@@ -14,20 +8,17 @@
 
     @media (width <= 425px) {
         padding: 60px 30px;
-        gap: 30px;
     }
 
-    .text {
-        font-size: 32px;
-        font-weight: 500;
-        line-height: 48px;
-        max-width: 760px;
-        text-align: center;
-        font-family: Raleway-maroon, sans-serif;
-
-        @media (width <= 425px) {
-            font-size: 22px;
-            line-height: 27.5px;
-        }
+    .background {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('../../../../assets/images/care.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        z-index: -1;
     }
 }
