--- a/src/components/shared/bestProducts/products/Products.module.scss
+++ b/src/components/shared/bestProducts/products/Products.module.scss
@@ -3,3 +3,11 @@
         display: none;
     }
 }
+
+.slide {
+    min-width: 270px;
+
+    @media (width <= 425px) {
+        min-width: calc(100vw - 70px);
+    }
+}
