--- a/src/components/ui/cards/cardMiddle/CardMiddle.module.scss
+++ b/src/components/ui/cards/cardMiddle/CardMiddle.module.scss
@@ -1,11 +1,12 @@
 .product {
     position: relative;
-    width: 270px;
     height: 350px;
-    display: block;
+    width: 100%;
 
-    @media (width <= 375px) {
-        width: calc(100vw - 70px);
+    .link {
+        position: absolute;
+        inset: 0;
+        z-index: 1;
     }
 
     .image {
@@ -31,15 +32,6 @@
             justify-content: space-between;
             gap: 10px;
 
-            &:first-child {
-                span {
-                    color: #122947;
-                    font-size: 16px;
-                    font-family: Raleway-maroon, sans-serif;
-                    font-weight: 500;
-                }
-            }
-
             &:last-child {
                 span {
                     color: #9a9da0;
@@ -47,6 +39,24 @@
                     font-family: 'Mplus 1p-maroon', sans-serif;
                     font-weight: 400;
                 }
+            }
+
+            &:first-child {
+                span {
+                    color: #122947;
+                    font-size: 16px;
+                    font-family: Raleway-maroon, sans-serif;
+                    font-weight: 500;
+
+                    &:last-child {
+                        font-family: 'Mplus 1p-maroon', sans-serif;
+                    }
+                }
+            }
+
+            .icon {
+                width: 10px;
+                height: 12px;
             }
         }
     }
