--- a/src/components/shared/filter/Filter.module.scss
+++ b/src/components/shared/filter/Filter.module.scss
@@ -1,14 +1,17 @@
 .wrapper {
     position: relative;
-    margin-top: 40px;
-    padding: 0 100px;
+    padding: 40px 100px 40px 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    box-shadow: 0px 4px 30px 0px rgba(214, 214, 214, 0.19);
 
     @media (width <= 768px) {
-        padding: 0 45px;
+        padding: 40px 45px 40px 45px;
     }
 
     @media (width <= 425px) {
-        padding: 0 15px;
+        padding: 40px 15px 40px 15px;
     }
 
     .container {
