--- a/src/components/shared/filter/menu/Menu.module.scss
+++ b/src/components/shared/filter/menu/Menu.module.scss
@@ -1,6 +1,9 @@
 .wrapper {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+
+    @media (max-width: 768px) {
+        align-items: center;
+    }
 }
