--- a/src/components/shared/header/burger/menu/Menu.module.scss
+++ b/src/components/shared/header/burger/menu/Menu.module.scss
@@ -7,11 +7,11 @@
     transition: height 0.5s;
     overflow: hidden;
     background-color: #f8f8f6;
-    z-index: 2;
+    z-index: 1;
 
     &__active {
         height: auto;
-        box-shadow: 0 4px 20px 0 rgb(255 255 255);
+        box-shadow: 0px 4px 30px 0px rgba(214, 214, 214, 0.19);
     }
 
     .container {
