Создал фильтр на странице каталога

--- a/src/components/shared/filter/menu/Menu.module.scss
+++ b/src/components/shared/filter/menu/Menu.module.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     gap: 40px;
 
-    @media (max-width: 768px) {
+    @media (width <= 768px) {
         align-items: center;
     }
 }
