--- a/src/components/shared/filter/Filter.module.scss
+++ b/src/components/shared/filter/Filter.module.scss
@@ -1,17 +1,17 @@
 .wrapper {
     position: relative;
-    padding: 40px 100px 40px 100px;
+    padding: 40px 100px;
     display: flex;
     flex-direction: column;
     gap: 50px;
-    box-shadow: 0px 4px 30px 0px rgba(214, 214, 214, 0.19);
+    box-shadow: 0 4px 30px 0 rgb(214 214 214 / 19%);
 
     @media (width <= 768px) {
-        padding: 40px 45px 40px 45px;
+        padding: 40px 45px;
     }
 
     @media (width <= 425px) {
-        padding: 40px 15px 40px 15px;
+        padding: 40px 15px;
     }
 
     .container {
