--- a/src/components/shared/filter/menu/list/List.module.scss
+++ b/src/components/shared/filter/menu/list/List.module.scss
@@ -4,7 +4,7 @@
     gap: 80px;
     position: relative;
 
-    @media (max-width: 660px) {
+    @media (width <= 660px) {
         display: none;
     }
 
@@ -13,6 +13,7 @@
         flex-direction: column;
         align-items: flex-start;
         gap: 30px;
+
         .title {
             font-size: 18px;
             font-weight: 500;
