--- a/src/components/shared/header/burger/menu/Menu.module.scss
+++ b/src/components/shared/header/burger/menu/Menu.module.scss
@@ -11,7 +11,7 @@
 
     &__active {
         height: auto;
-        box-shadow: 0px 4px 30px 0px rgba(214, 214, 214, 0.19);
+        box-shadow: 0 4px 30px 0 rgb(214 214 214 / 19%);
     }
 
     .container {
