--- a/src/components/ui/slider/modules/pagination/Pagination.module.scss
+++ b/src/components/ui/slider/modules/pagination/Pagination.module.scss
@@ -11,6 +11,7 @@
         color: #9a9da0;
         transition: 0.3s;
         width: 30px;
+        text-align: center;
 
         &:hover {
             color: #122947;
