--- a/src/components/shared/aboutProduct/AboutProduct.module.scss
+++ b/src/components/shared/aboutProduct/AboutProduct.module.scss
@@ -1,19 +1,19 @@
 .wrapper {
-    padding: 40px 100px 0px 100px;
+    padding: 40px 100px 0;
     display: flex;
     gap: 70px;
     align-items: center;
     justify-content: center;
 
     @media (width <= 768px) {
-        padding: 40px 45px 0px 45px;
+        padding: 40px 45px 0;
         flex-direction: column;
         align-items: flex-start;
         gap: 60px;
     }
 
     @media (width <= 425px) {
-        padding: 40px 15px 0px 15px;
+        padding: 40px 15px 0;
         gap: 50px;
     }
 
