Создал страницу продукта

--- a/src/components/shared/filter/Filter.module.scss
+++ b/src/components/shared/filter/Filter.module.scss
@@ -40,7 +40,7 @@
             }
         }
 
-        .button {
+        .filter {
             @media (width <= 425px) {
                 font-size: 14px;
             }
