--- a/src/components/shared/registerForm/RegisterForm.module.scss
+++ b/src/components/shared/registerForm/RegisterForm.module.scss
@@ -3,4 +3,11 @@
     flex-direction: column;
     gap: 30px;
     width: 100%;
+
+    .container {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+        align-items: center;
+    }
 }
