Сделал полную фильтрацию продуктов

--- a/src/components/shared/filter/menu/accordionList/AccordionList.module.scss
+++ b/src/components/shared/filter/menu/accordionList/AccordionList.module.scss
@@ -10,7 +10,7 @@
     .accordion {
         width: 100%;
 
-        .items {
+        .categories {
             display: flex;
             flex-direction: column;
             gap: 20px;
