--- a/src/components/shared/filter/menu/list/List.module.scss
+++ b/src/components/shared/filter/menu/list/List.module.scss
@@ -20,7 +20,7 @@
             font-family: 'Mplus 1p-maroon', sans-serif;
         }
 
-        .items {
+        .categories {
             display: flex;
             flex-direction: column;
             gap: 20px;
