--- a/src/components/shared/userForm/UserForm.module.scss
+++ b/src/components/shared/userForm/UserForm.module.scss
@@ -1,5 +1,6 @@
 .form {
     max-width: 500px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -10,6 +11,8 @@
     .image {
         border-radius: 10px;
         object-fit: cover;
+        max-height: 300px;
+        width: 100%;
     }
 
     .container {
