Создал компонент с приватной ссылкой

--- a/src/components/shared/aboutProduct/AboutProduct.module.scss
+++ b/src/components/shared/aboutProduct/AboutProduct.module.scss
@@ -2,7 +2,7 @@
     padding: 40px 100px 0;
     display: flex;
     gap: 70px;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 
     @media (width <= 768px) {
