--- a/src/components/shared/bestProducts/products/Products.module.scss
+++ b/src/components/shared/bestProducts/products/Products.module.scss
@@ -8,6 +8,13 @@
     min-width: 270px;
 
     @media (width <= 425px) {
-        min-width: calc(100vw - 70px);
+        min-width: calc(100vw - 30px);
+    }
+
+    .product {
+        img {
+            opacity: 1 !important;
+            transform: scale(1.1);
+        }
     }
 }
