--- a/src/components/screens/notFound/NotFound.module.scss
+++ b/src/components/screens/notFound/NotFound.module.scss
@@ -3,14 +3,14 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding: 100px 15px;
+    padding: 100px 15px 0;
 
     @media (width <= 768px) {
-        padding: 50px 15px;
+        padding: 50px 15px 0;
     }
 
     @media (width <= 420px) {
-        padding: 20px 15px;
+        padding: 20px 15px 0;
     }
 
     .title {
