--- a/src/components/screens/profile/Profile.module.scss
+++ b/src/components/screens/profile/Profile.module.scss
@@ -1,13 +1,13 @@
 .wrapper {
     display: flex;
     justify-content: center;
-    padding: 100px 15px;
+    padding: 100px 15px 0;
 
     @media (width <= 768px) {
-        padding: 50px 15px;
+        padding: 50px 15px 0;
     }
 
     @media (width <= 420px) {
-        padding: 20px 15px;
+        padding: 20px 15px 0;
     }
 }
