--- a/src/components/shared/bestProducts/BestProducts.module.scss
+++ b/src/components/shared/bestProducts/BestProducts.module.scss
@@ -14,6 +14,10 @@
         padding: 0 35px;
     }
 
+    @media (width <= 425px) {
+        padding: 0 15px;
+    }
+
     .link {
         display: none;
 
