--- a/src/components/ui/cards/cardShort/CardShort.module.scss
+++ b/src/components/ui/cards/cardShort/CardShort.module.scss
@@ -2,12 +2,21 @@
     position: relative;
     width: 100%;
     height: 350px;
+    border-radius: 10px;
+    overflow: hidden;
 
     .image {
         width: 100%;
         height: 350px;
         user-select: none;
         object-fit: cover;
+        opacity: 0.8;
+        transition: all 0.3s;
+    }
+
+    &:hover .image {
+        opacity: 1;
+        transform: scale(1.1);
     }
 
     .container {
