Создал пагинацию для продуктов

--- a/src/components/shared/basketInfo/products/Products.module.scss
+++ b/src/components/shared/basketInfo/products/Products.module.scss
@@ -4,6 +4,11 @@
     flex-direction: column;
     background-color: #f4f1ed;
     flex: 1;
+    width: 100%;
+
+    @media (width <= 425px) {
+        border-radius: 13px;
+    }
 
     .products {
         display: flex;
