--- a/src/components/ui/pagination/Pagination.module.scss
+++ b/src/components/ui/pagination/Pagination.module.scss
@@ -1,10 +1,10 @@
 .pagination {
-    grid-column: 2 / 3;
     display: flex;
     align-items: center;
-    gap: 8px;
-    user-select: none;
+    justify-content: center;
+    grid-column: 2 / 3;
     text-align: center;
+    gap: 8px;
 
     .page {
         font-size: 18px;
