--- a/src/components/shared/basketInfo/BasketInfo.module.scss
+++ b/src/components/shared/basketInfo/BasketInfo.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     gap: 30px;
 
-    @media (width <= 768px) {
+    @media (width <= 1110px) {
         padding: 40px 45px 0;
     }
 
@@ -32,8 +32,9 @@
         justify-content: center;
         gap: 30px;
 
-        @media (width <= 550px) {
+        @media (width <= 1000px) {
             flex-direction: column;
+            align-items: center;
         }
     }
 }
