--- a/src/components/shared/basketInfo/information/Information.module.scss
+++ b/src/components/shared/basketInfo/information/Information.module.scss
@@ -3,6 +3,14 @@
     max-width: 370px;
     width: 100%;
 
+    @media (width <= 1000px) {
+        max-width: 500px;
+    }
+
+    @media (width <= 425px) {
+        border-radius: 13px;
+    }
+
     .buy {
         display: flex;
         flex-direction: column;
@@ -10,10 +18,18 @@
         padding: 24px;
         border-bottom: 1px solid #dbdce0;
 
+        &__border {
+            border-bottom: none;
+        }
+
         .button {
             padding: 15px 50px;
             width: 100%;
             border-radius: 12px;
+
+            @media (width <= 425px) {
+                padding: 15px 10px;
+            }
         }
 
         .info {
