--- a/src/components/shared/productsList/ProductsList.module.scss
+++ b/src/components/shared/productsList/ProductsList.module.scss
@@ -3,6 +3,8 @@
     padding: 0 100px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    gap: 50px;
 
     @media (width <= 768px) {
         padding: 0 45px;
@@ -33,6 +35,20 @@
 
         @media (width <= 600px) {
             grid-template-columns: 1fr;
+        }
+    }
+
+    .actions {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px;
+        align-items: center;
+
+        .pagination {
+            @media (width <= 420px) {
+                justify-content: left;
+                grid-column: 1/3;
+            }
         }
     }
 }
