--- a/src/components/ui/cards/cardBasket/CardBasket.module.scss
+++ b/src/components/ui/cards/cardBasket/CardBasket.module.scss
@@ -13,25 +13,39 @@
         align-items: flex-start;
         justify-content: space-between;
 
+        @media (width <= 710px) {
+            flex-direction: column;
+        }
+
         .content {
             display: flex;
             gap: 30px;
             align-items: flex-start;
+
+            @media (width <= 425px) {
+                align-items: center;
+                gap: 20px;
+            }
 
             .block {
                 display: flex;
                 align-items: center;
                 gap: 12px;
 
-                .image {
+                .link {
                     width: 100px;
                     height: 100px;
-                    object-fit: cover;
-                    border-radius: 10px;
 
                     @media (width <= 425px) {
                         width: 60px;
                         height: 60px;
+                    }
+
+                    .image {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        border-radius: 10px;
                     }
                 }
             }
