--- a/src/components/ui/navigation/Navigation.module.scss
+++ b/src/components/ui/navigation/Navigation.module.scss
@@ -1,7 +1,8 @@
 .navigation {
-    grid-column: 3 / 4;
     display: flex;
     align-items: center;
+    justify-content: right;
+    grid-column: 3 / 4;
     gap: 20px;
 
     .button {
