--- a/src/components/shared/recommendations/Recommendations.module.scss
+++ b/src/components/shared/recommendations/Recommendations.module.scss
@@ -18,7 +18,7 @@
     }
 
     .background {
-        background-image: url('../../../assets/images/header.png');
+        background-image: url('../../../assets/images/header.avif');
         background-repeat: no-repeat;
         background-size: cover;
         position: absolute;
