--- a/src/components/shared/banners/bannerTwo/BannerTwo.module.scss
+++ b/src/components/shared/banners/bannerTwo/BannerTwo.module.scss
@@ -16,7 +16,7 @@
         top: 0;
         width: 100%;
         height: 100%;
-        background-image: url('../../../../assets/images/care.png');
+        background-image: url('../../../../assets/images/care.avif');
         background-repeat: no-repeat;
         background-size: cover;
         z-index: -1;
